# CompGraphics23

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang_format_helper.sh  ubuntu_env.sh
.github/workflows/: cmake_build_and_tests.yml  main.yml
ConverterLibrary/: CMakeLists.txt
ConverterLibrary/include/converter/: converter.h
ConverterLibrary/src/converter/bmp/: bmp.cpp
ConverterLibrary/src/converter/ppm/: ppm.cpp
ImageConverter/: CMakeLists.txt
ImageConverter/src/: main.cpp
ImageConverterLibrary/: CMakeLists.txt
ImageConverterLibrary/include/icl/: bmp_reader.h  image.h  image_factory.h  image_reader.h  image_writer.h  ppm_reader.h
ImageConverterLibrary/include/icl/bmp/: bmp.h  bmp_image.h  bmp_reader.h  bmp_writer.h
ImageConverterLibrary/include/icl/ppm/: ppm.h  ppm_image.h  ppm_reader.h  ppm_writer.h
ImageConverterLibrary/src/: bmp_reader.cpp
ImageConverterLibrary/src/icl/: image.cpp
ImageConverterLibrary/src/icl/bmp/: bmp_image.cpp  bmp_reader.cpp  bmp_writer.cpp
ImageConverterLibrary/src/icl/ppm/: ppm_image.cpp  ppm_reader.cpp  ppm_writer.cpp
RayTracer/: CMakeLists.txt  README.md
RayTracer/include/: lmath.h
RayTracer/include/files/: ObjReader.h  utils.h
RayTracer/include/lmath/: matrix.h  point2.h  point3.h  point4.h  vec3.h  vec4.h
RayTracer/include/objects/: disk.h  model.h  object.h  plane.h  sphere.h  triangle.h
RayTracer/include/render/: camera.h  hit_record.h  ray.h  renderer.h
RayTracer/src/: main.cpp
RayTracer/src/files/: ObjReader.cpp
RayTracer/src/lmath/: matrix.cpp  point2.cpp  point3.cpp  point4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
RayTracer/src/objects/: disk.cpp  model.cpp  plane.cpp  sphere.cpp  triangle.cpp
RayTracer/src/render/: renderer.cpp
RayTracer/tests/: CMakeLists.txt  plane_tests.cpp  triangle_tests.cpp
cmake/: Conan.cmake  ConverterLibraryConfig.cmake
include/: lmath.h  math.h
include/lmath/: point2.h  point3.h  vec2.h  vec3.h
include/math/: math.h  point2.h  point3.h  vec2.h  vec3.h
include/objects/: disk.h  object.h  plane.h  scene.h  sphere.h
include/render/: camera.h  hit_record.h  ray.h  renderer.h
src/: main.cpp
src/lmath/: point2.cpp  point3.cpp  vec2.cpp  vec3.cpp
src/math/: math.cpp  point2.cpp  point3.cpp  vec2.cpp  vec3.cpp
src/objects/: disk.cpp  plane.cpp  sphere.cpp
src/render/: camera.cpp  hit_record.cpp  ray.cpp  renderer.cpp
tests/: CMakeLists.txt  disk_tests.cpp  math_tests.cpp  sphere_tests.cpp
